--- a/package.json
+++ b/package.json
@@ -6,24 +6,30 @@
   "repository": "https://github.com/angular/angular-seed",
   "license": "MIT",
   "devDependencies": {
+    "angular-mocks": "^1.5.0-beta.0",
     "babel-core": "^5.4.7",
     "babel-loader": "^5.1.3",
     "bower": "^1.3.1",
     "css-loader": "^0.14.5",
     "extract-text-webpack-plugin": "^0.8.2",
+    "file-loader": "^0.8.4",
+    "imports-loader": "^0.6.4",
     "jasmine-core": "^2.3.4",
-    "karma": "~0.12",
+    "karma": "^0.13.9",
     "karma-chrome-launcher": "^0.1.12",
-    "karma-firefox-launcher": "^0.1.6",
     "karma-jasmine": "^0.3.5",
     "karma-junit-reporter": "^0.2.2",
+    "karma-webpack": "^1.7.0",
     "less": "^2.5.1",
     "less-loader": "^2.2.0",
     "node-libs-browser": "^0.5.2",
+    "node-sass": "^3.3.3",
     "protractor": "^2.1.0",
     "raw-loader": "^0.5.1",
+    "sass-loader": "^2.0.1",
     "style-loader": "^0.12.3",
-    "webpack": "^1.9.10"
+    "url-loader": "^0.5.6",
+    "webpack": "^1.12.2"
   },
   "scripts": {
     "postinstall": "bower install",
@@ -40,6 +46,8 @@
   "dependencies": {
     "angular": "^1.4.6",
     "angular-ui-router": "^0.2.15",
+    "jquery": "^2.1.4",
+    "oclazyload": "^1.0.5",
     "ui-router": "0.0.1"
   }
 }
