--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.9",
     "karma-chrome-launcher": "^0.1.12",
+    "karma-firefox-launcher": "^0.1.6",
     "karma-jasmine": "^0.3.5",
-    "karma-junit-reporter": "^0.2.2",
+    "karma-mocha-reporter": "^1.1.1",
     "karma-webpack": "^1.7.0",
     "less": "^2.5.1",
     "less-loader": "^2.2.0",
